--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "sweetalert": "^2.1.2",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
