--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.11.1",
     "sweetalert": "^2.1.2",
     "typewriter-effect": "^2.19.0"
