--- a/.gitignore
+++ b/.gitignore
@@ -2509,3 +2509,4 @@ backend/node_modules/yallist/LICENSE
 backend/node_modules/yallist/package.json
 backend/node_modules/yallist/README.md
 backend/node_modules/yallist/yallist.js
+backend/.DS_Store
