--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.11.1",
     "sweetalert": "^2.1.2",
+    "swiper": "^9.4.1",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
